# romescribe

./: .gitignore  LICENSE  README.md  index.html  overlay.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: main.ts  overlay.css  overlay.ts  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  lib.rs  main.rs  model.rs  settings.rs  transcribe.rs
