[package]
name = "romescribe"
version = "0.6.1"
edition = "2021"

[lib]
name = "romescribe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
whisper-rs = { version = "0.14", features = ["metal"] }
cpal = "0.15"
hound = "3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
reqwest = { version = "0.12", features = ["blocking"] }
chrono = "0.4"
core-graphics = "0.24"
rustfft = "6"
